Update MaterialPillsBox class :beers:

--- a/app/src/main/res/layout/content_delete_pills.xml
+++ b/app/src/main/res/layout/content_delete_pills.xml
@@ -24,6 +24,7 @@
         <pe.elcomercio.materialpillsbox.MaterialPillsBox
             android:id="@+id/mtbArea"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:max="15"/>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
