--- a/materialpillsbox/src/main/res/values/attr.xml
+++ b/materialpillsbox/src/main/res/values/attr.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="MaterialPillsBox">
-
-
+        <attr name="max" format="integer"/>
+        <attr name="progress" format="float"/>
+        <attr name="backgroundSize" format="dimension"/>
+        <attr name="circleSize" format="dimension"/>
+        <attr name="backgroundCircle" format="color|reference"/>
+        <attr name="progressColor" format="color|reference"/>
+        <attr name="progressOutline" format="boolean"/>
+        <attr name="animation">
+            <enum name="BUTT" value="0"/>
+            <enum name="ROUND" value="1"/>
+            <enum name="SQUARE" value="2"/>
+        </attr>
     </declare-styleable>
 </resources>
