--- a/materialpillsbox/src/main/res/layout/pills_box_layout.xml
+++ b/materialpillsbox/src/main/res/layout/pills_box_layout.xml
@@ -14,7 +14,7 @@
         android:src="@drawable/ic_close_white_24dp"/>
 
     <TextView
-        android:id="@+id/lblPill"
+        android:id="@+id/lblMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/md_white_1000"
