Add new background shape :art:

--- a/materialpillsbox/src/main/res/layout/pills_box_layout.xml
+++ b/materialpillsbox/src/main/res/layout/pills_box_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="5dp"
-    android:background="@drawable/shape_blue_500">
+    android:background="@drawable/shape_button_pill">
 
     <ImageView
         android:id="@+id/imgClose"
