--- a/materialpillsbox/src/main/res/drawable/shape_button_selected_pill.xml
+++ b/materialpillsbox/src/main/res/drawable/shape_button_selected_pill.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
-        <shape android:shape="oval">
-            <solid android:color="@color/md_teal_500"/>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/md_blue_grey_500" />
             <corners android:radius="14dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
-        <shape android:shape="oval">
-            <solid android:color="@color/md_teal_700"/>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/md_blue_grey_700" />
             <corners android:radius="14dp"/>
         </shape>
     </item>
