--- a/materialpillsbox/src/main/res/layout/pills_box_layout.xml
+++ b/materialpillsbox/src/main/res/layout/pills_box_layout.xml
@@ -3,21 +3,28 @@
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="5dp"
+    android:padding="4dp"
     android:background="@drawable/shape_button_pill">
 
     <ImageView
         android:id="@+id/imgClose"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_close_white_24dp"/>
+        android:src="@drawable/ic_close_white_24dp"
+        android:contentDescription="@null"/>
 
     <TextView
         android:id="@+id/lblMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/md_white_1000"
-        android:text="@string/im_a_pill" />
+        android:layout_marginEnd="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginStart="3dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="@string/im_a_pill"
+        android:textColor="@color/md_white_1000" />
 
 </LinearLayout>
