--- a/app/src/main/res/layout/content_delete_pills.xml
+++ b/app/src/main/res/layout/content_delete_pills.xml
@@ -7,24 +7,55 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="pe.elcomercio.materialpills.DeletePillsActivity"
     tools:showIn="@layout/activity_delete_pills">
+
     <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="369dp"
+        android:layout_height="394dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintVertical_bias="0.501">
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:id="@+id/scrollView2"
+        tools:layout_editor_absoluteX="15dp">
 
         <pe.elcomercio.materialpillsbox.MaterialPillsBox
             android:id="@+id/mtbArea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:max="15"/>
+            app:max="10"
+            app:backgroundPill="@drawable/shape_button_pill_red"/>
+
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnAddPill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_pill"
+        app:layout_constraintRight_toLeftOf="@+id/btnDeletePills"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="49dp"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.291" />
+
+    <Button
+        android:id="@+id/btnDeletePills"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/delete_all"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/btnAddPill"
+        app:layout_constraintTop_toTopOf="@+id/btnAddPill"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnAddPill"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
+
+
 </android.support.constraint.ConstraintLayout>
