--- a/materialpillsbox/src/main/res/layout/pills_box_layout.xml
+++ b/materialpillsbox/src/main/res/layout/pills_box_layout.xml
@@ -3,7 +3,13 @@
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="4dp"
+    android:layout_margin="2dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:paddingLeft="6dp"
+    android:paddingStart="6dp"
+    android:paddingEnd="6dp"
+    android:paddingRight="6dp"
     android:background="@drawable/shape_button_pill">
 
     <ImageView
@@ -11,6 +17,10 @@
         android:layout_width="14dp"
         android:layout_height="14dp"
         android:layout_gravity="center"
+        android:layout_marginLeft="2dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:src="@drawable/ic_close_white_24dp"
         android:contentDescription="@null"/>
 
@@ -18,10 +28,10 @@
         android:id="@+id/lblMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="@string/im_a_pill"
