--- a/app/src/main/res/layout/content_delete_pills.xml
+++ b/app/src/main/res/layout/content_delete_pills.xml
@@ -26,8 +26,11 @@
             android:id="@+id/mtbArea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:max="10"
-            app:backgroundPill="@drawable/shape_button_pill_red"/>
+            app:showCloseIcon="true"
+            app:maxPills="10"
+            app:pillTextColor="@color/md_teal_500"
+            app:pillBackground="@drawable/shape_button_pill_red"
+            app:closeIcon="@drawable/ic_edit_white_24dp"/>
 
     </ScrollView>
 
@@ -36,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_pill"
-        app:layout_constraintRight_toLeftOf="@+id/btnDeletePills"
+        app:layout_constraintRight_toLeftOf="@+id/btnDeletePill"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="49dp"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
@@ -45,7 +48,7 @@
         app:layout_constraintVertical_bias="0.291" />
 
     <Button
-        android:id="@+id/btnDeletePills"
+        android:id="@+id/btnDeletePill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/delete_all"
