--- a/materialpillsbox/src/main/res/layout/pills_box_layout.xml
+++ b/materialpillsbox/src/main/res/layout/pills_box_layout.xml
@@ -21,8 +21,8 @@
         android:layout_marginStart="2dp"
         android:layout_marginRight="2dp"
         android:layout_marginEnd="2dp"
-        android:src="@drawable/ic_close_white_24dp"
-        android:contentDescription="@null"/>
+        android:contentDescription="@null"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/lblMessage"
