feat(MaterialPillBox): New Features added :sparkles:
- add ic_pillbox_launcher
- change color primary and dark
- shape_button_pill.xml modified
- setupPillChildView methos added

--- a/materialpillsbox/src/main/res/values/attr.xml
+++ b/materialpillsbox/src/main/res/values/attr.xml
@@ -9,6 +9,10 @@
         <attr name="pillTextColor" format="color|reference"/>
         <attr name="showCloseIcon" format="boolean"/>
         <attr name="closeIcon" format="reference"/>
+        <attr name="pillMarginTop" format="dimension"/>
+        <attr name="pillMarginBottom" format="dimension"/>
+        <attr name="pillMarginLeft" format="dimension"/>
+        <attr name="pillMarginRight" format="dimension"/>
         <attr name="animation">
             <enum name="BUTT" value="0"/>
             <enum name="ROUND" value="1"/>
