--- a/materialpillsbox/src/main/res/drawable-v21/shape_button_pill.xml
+++ b/materialpillsbox/src/main/res/drawable-v21/shape_button_pill.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/md_teal_700">
+    android:color="@color/md_orange_700">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/md_teal_500" />
+            <solid android:color="@color/md_orange_500" />
             <corners android:radius="14dp"/>
         </shape>
     </item>
