--- a/materialpillsbox/src/main/res/drawable/shape_button_pill.xml
+++ b/materialpillsbox/src/main/res/drawable/shape_button_pill.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/md_teal_500"/>
+            <solid android:color="@color/md_orange_500"/>
             <corners android:radius="14dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/md_teal_700"/>
+            <solid android:color="@color/md_orange_700"/>
             <corners android:radius="14dp"/>
         </shape>
     </item>
