--- a/materialpillsbox/src/main/res/layout/pills_box_layout.xml
+++ b/materialpillsbox/src/main/res/layout/pills_box_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:layout_margin="@dimen/default_pill_margin"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:paddingLeft="6dp"
