--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,32 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pe.elcomercio.materialpills.MainActivity"
+    tools:context="pe.orbis.materialpills.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="369dp"
         android:layout_height="394dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:id="@+id/scrollView2"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="15dp">
 
-        <pe.elcomercio.materialpillsbox.MaterialPillsBox
+        <pe.orbis.materialpillsbox.MaterialPillsBox
             android:id="@+id/mtbArea"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:showCloseIcon="true"
+            android:layout_height="40dp"
             app:maxPills="10"
-            app:pillTextColor="@color/md_white_1000"
-            app:closeIcon="@drawable/ic_close_white_24dp"
-            app:pillMarginBottom="2dp"/>
+            app:pillSelectionMode="none"
+            app:showCloseIcon="true" />
 
     </ScrollView>
 
@@ -38,27 +36,26 @@
         android:id="@+id/btnAddPill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_pill"
-        app:layout_constraintRight_toLeftOf="@+id/btnDeletePill"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="49dp"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="49dp"
+        android:text="@string/add_pill"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btnDeletePill"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
         app:layout_constraintVertical_bias="0.291" />
 
     <Button
         android:id="@+id/btnDeletePill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/delete_all"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/btnAddPill"
-        app:layout_constraintTop_toTopOf="@+id/btnAddPill"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnAddPill"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/delete_all"
+        app:layout_constraintBottom_toBottomOf="@+id/btnAddPill"
+        app:layout_constraintLeft_toRightOf="@+id/btnAddPill"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnAddPill"
         app:layout_constraintVertical_bias="0.0" />
-
 
 </android.support.constraint.ConstraintLayout>
