--- a/materialpillsbox/src/main/res/values/attr.xml
+++ b/materialpillsbox/src/main/res/values/attr.xml
@@ -13,10 +13,19 @@
         <attr name="pillMarginBottom" format="dimension"/>
         <attr name="pillMarginLeft" format="dimension"/>
         <attr name="pillMarginRight" format="dimension"/>
-        <attr name="animation">
-            <enum name="BUTT" value="0"/>
-            <enum name="ROUND" value="1"/>
-            <enum name="SQUARE" value="2"/>
+
+
+        <attr name="pillPaddingTop" format="dimension"/>
+        <attr name="pillPaddingBottom" format="dimension"/>
+        <attr name="pillPaddingLeft" format="dimension"/>
+        <attr name="pillPaddingRight" format="dimension"/>
+
+
+        <attr name="closeIconPadding" format="dimension"/>
+
+        <attr name="pillSelectionMode">
+            <enum name="none" value="0"/>
+            <enum name="multi" value="1"/>
         </attr>
     </declare-styleable>
 </resources>
