--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,9 +26,14 @@
             android:id="@+id/mtbArea"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            app:maxPills="10"
-            app:pillSelectionMode="none"
-            app:showCloseIcon="true" />
+            app:closeIcon="@drawable/ic_edit_white_24dp"
+            app:closeIconPadding="@dimen/default_close_icon_margin"
+            app:maxPills="20"
+            app:pillSelectedBackground="@drawable/shape_button_pill_red"
+            app:pillSelectionMode="multi"
+            app:showCloseIcon="true"
+            app:pillTextColor="@color/md_amber_500"
+            app:pillMarginBottom="10dp"/>
 
     </ScrollView>
 
