--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,8 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:maxPills="20"
-            app:pillSelectionMode="multi"
-            app:showCloseIcon="true"/>
+            app:pillSelectionMode="none"
+            app:showCloseIcon="true"
+            app:closeIconPadding="2dp" />
 
     </ScrollView>
 
