tipo(MaterialPillsBox): Add new features :sparkles:
- Add view param to OnPillClickListener
- Change name of attr closeIconMarginLeft

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,7 +30,7 @@
             app:maxPills="40"
             app:pillSelectionMode="multi"
             app:showCloseIcon="true"
-            app:closeIconPadding="2dp" />
+            app:pillCloseIconMarginLeft="2dp" />
 
     </ScrollView>
 
