--- a/materialpillsbox/src/main/res/layout/pills_box_layout.xml
+++ b/materialpillsbox/src/main/res/layout/pills_box_layout.xml
@@ -23,19 +23,20 @@
         android:layout_marginEnd="2dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:layout_gravity="center"
         android:text="@string/im_a_pill"
         android:textColor="@color/md_white_1000" />
 
     <ImageView
         android:id="@+id/imgClose"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/default_close_icon_margin_left"
         android:layout_marginStart="@dimen/default_close_icon_margin_left"
         android:layout_marginRight="@dimen/default_close_icon_margin_right"
         android:layout_marginEnd="@dimen/default_close_icon_margin_right"
         android:contentDescription="@null"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </LinearLayout>
