--- a/materialpillsbox/src/main/res/values/attr.xml
+++ b/materialpillsbox/src/main/res/values/attr.xml
@@ -6,7 +6,7 @@
         <attr name="pillSelectedBackground" format="reference"/>
         <attr name="pillTextColor" format="color|reference"/>
         <attr name="showCloseIcon" format="boolean"/>
-        <attr name="closeIcon" format="reference"/>
+        <attr name="pillCloseIcon" format="reference"/>
         <attr name="pillMarginTop" format="dimension"/>
         <attr name="pillMarginBottom" format="dimension"/>
         <attr name="pillMarginLeft" format="dimension"/>
